[package]
name = "todo"
version = "0.2.2"
edition = "2024"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_System_Console",
    "Win32_Foundation"
] }

[dependencies]
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "8.2.0"